Fix word break in titles

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -204,6 +204,7 @@ article {
             font-weight: 700;
             letter-spacing: -1px;
             line-height: 1.3em;
+            word-break: break-word;
             margin: 0;
             margin-bottom: $article-padding/4;
         }
